--- a/testhiilkaab/package.json
+++ b/testhiilkaab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testhiilkaab",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://hiilkaabapp.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
