--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
+    "mailgen": "^2.0.27",
     "mongoose": "^6.8.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
