--- a/testhiilkaab/package.json
+++ b/testhiilkaab/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
     "@mui/material": "^5.11.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -23,7 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
+    "react-slick": "^0.29.0", 
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
