--- a/testhiilkaab/package.json
+++ b/testhiilkaab/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "primeicons": "^6.0.1",
     "primereact": "^9.3.1",
     "react": "^18.2.0",
@@ -24,7 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0", 
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
